fix: 헤더 글씨체, 달력 날짜 gap (#117)

--- a/client/src/components/Header/style.scss
+++ b/client/src/components/Header/style.scss
@@ -1,7 +1,6 @@
 header {
   display: flex;
   justify-content: center;
-  font-family: 'Do Hyeon', sans-serif;
   color: var(--off-white-color);
   background-color: var(--primary-color);
 
@@ -12,6 +11,7 @@ header {
 
     .title {
       font-size: var(--display-small-size);
+      font-family: 'Do Hyeon', sans-serif;
     }
   }
 
@@ -22,15 +22,20 @@ header {
   }
 
   .month-display {
-    width: 100px;
+    display: flex;
+    flex-direction: column;
     text-align: center;
+    gap: 6px;
+    width: 100px;
     margin: 0 44px;
 
     .month {
       font-size: var(--display-large-size);
+      font-family: 'Do Hyeon', sans-serif;
     }
     .year {
       font-size: var(--display-small-size);
+      font-family: 'Do Hyeon', sans-serif;
     }
     & > img {
     }
